frontend-ant/src/sass/components/_button-operation.scss
//this style for buttons operation Account income , expense, transfer
.button-operation-container {
    display: flex;
    width: 124px;
    height: 40px;
    justify-content: center;
    align-items: center;
}
.button-operation-income,
.button-operation-expense,
.button-operation-transfer {
  width: 36px;
  height: 40px;
  border-radius: 5px;
  cursor: pointer;
  border: none;
  display: flex;
  justify-content: center;
  align-items: center;

  i {
    font-size: 1.2rem; 
    margin-right: 5px; 
  }

  &:hover {
    background-color: gold; 
  }
}

.button-operation-income {
    background-color: transparent;
    color: white;
    margin-right: 5px;
  }
  
  .button-operation-expense {
    background-color: transparent;
    color: white;
    margin-right: 5px;
  }
  
  .button-operation-transfer {
    background-color: transparent;
    color: white;
  }

.icon-img {
    width: 24px; 
    height: 24px; 
    margin-right: 5px;
}

.tabs-extra-add-account-button {
    background-color: gold;
     width: 38px;
    margin: 0px;
    padding: 0px;
    height: 40px;

    &:hover {
        background-color: gold; 
      }
}

